add planet animation

--- a/clock/css/style.css
+++ b/clock/css/style.css
@@ -1,24 +1,30 @@
 body {
-    background: black;
+    background: #00000099;
 }
-#ds{
-	width:30px;
-	height:150px;
-	background:#000;
-	position:absolute;
-	top:0px;
-	left:0px;
-    overflow:hidden;	
-transition:width 0.5s;
-	-moz-transition:width 2s; /* Firefox 4 */
-	-webkit-transition:width 0.5s; /* Safari and Chrome */
-	-o-transition:width 2s; /* Opera */
+
+#ds {
+    width: 30px;
+    height: 150px;
+    background: #000;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    overflow: hidden;
+    transition: width 0.5s;
+    -moz-transition: width 2s;
+    /* Firefox 4 */
+    -webkit-transition: width 0.5s;
+    /* Safari and Chrome */
+    -o-transition: width 2s;
+    /* Opera */
 }
-#ds:hover{
-	width:300px;	
+
+#ds:hover {
+    width: 300px;
 }
-#ds span{
-	margin:0px 40px;
+
+#ds span {
+    margin: 0px 40px;
 }
 
 
@@ -56,10 +62,10 @@ transition:width 0.5s;
 }
 
 .element {
-	position: absolute;
-	top: 0;
-	left: 0;
-	background-color: #CCCCCC;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #CCCCCC;
 }
 
 .round {
@@ -96,7 +102,7 @@ transition:width 0.5s;
     width: 2px;
     height: 164px;
     background: #FA9F22;
-    transform: translate(-50%,-100%) translateY(24px);
+    transform: translate(-50%, -100%) translateY(24px);
 }
 
 .hour {
@@ -107,7 +113,7 @@ transition:width 0.5s;
     width: 4px;
     height: 50px;
     background: white;
-    transform: translate(-50%,-100%);
+    transform: translate(-50%, -100%);
 }
 
 .fat-hand {
@@ -115,7 +121,7 @@ transition:width 0.5s;
     height: 57px;
     border-radius: 10px;
     background: white;
-    transform: translate(-50%,-100%) translateY(-18px);
+    transform: translate(-50%, -100%) translateY(-18px);
 }
 
 .minute-hand {
@@ -126,12 +132,13 @@ transition:width 0.5s;
     position: absolute;
     font: 40px Hei, Helvetica, Arial, sans-serif;
     color: white;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
 .hour-10 {
     padding-left: 0.4ex;
 }
+
 .hour-11 {
     padding-left: 0.25ex;
 }
@@ -140,13 +147,13 @@ transition:width 0.5s;
     position: absolute;
     font: 12px Avenir Next, Helvetica, Arial, sans-serif;
     color: white;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%, -50%);
 }
 
 .minute-line {
     background: white;
     width: 1px;
     height: 9px;
-    transform: translate(-50%,-100%) translateY(-131px);
+    transform: translate(-50%, -100%) translateY(-131px);
     opacity: 0.34;
 }
