--- a/clock/css/style.css
+++ b/clock/css/style.css
@@ -8,11 +8,13 @@ html, body {
     /* 或者使用 */
     background-color: #00000099 !important;
 }
-
+iframe {
+    pointer-events: none;
+}
 
 #ds {
-    width: 30px;
-    height: 150px;
+    width: 0;
+    height: 0;
     background: #000;
     position: absolute;
     top: 0px;
