--- a/planet/css/index.css
+++ b/planet/css/index.css
@@ -3,6 +3,9 @@ html
     height: 100%;
     overflow: hidden;
 }
+iframe {
+    pointer-events: none;
+}
 
 body,
 div,
@@ -61,7 +64,7 @@ body
 .universe
 {
     /* background: url("../images/universe.png") no-repeat center center; */
-    background: black;
+    /* background: black; */
     height: 100vh;
     width: 100vw;
     margin: 0 auto;
